--- a/config/adb_se_eb0.yaml
+++ b/config/adb_se_eb0.yaml
@@ -103,6 +103,7 @@ valid:
         maxThresh: 0.7
       DetNorm:
         mean: [ 122.67891434, 116.66876762, 104.00698793 ]
+        limit: 1920
       DetFilter:
         key: [ 'polygon', 'shape', 'ignore', 'train' ]
 
