--- a/config/adb_se_eb0.yaml
+++ b/config/adb_se_eb0.yaml
@@ -61,7 +61,7 @@ train:
           rotate: [ -10, 10 ]
           fit_output: True
         Resize:
-          size: [ 0.5, 1.5 ]
+          size: [ 0.5, 1 ]
       DetCrop:
         minCropSize: 0.1
         maxTries: 10
@@ -76,6 +76,7 @@ train:
         maxThresh: 0.7
       DetNorm:
         mean: [ 122.67891434, 116.66876762, 104.00698793 ]
+        limit: 1920
       DetFilter:
         key: [ 'polygon', 'shape', 'ignore', 'train' ]
 
