--- a/config/synth_eb0.yaml
+++ b/config/synth_eb0.yaml
@@ -42,6 +42,8 @@ train:
     prep:
       DetAug:
         onlyResize: True
+        Resize:
+          size: [ 0.5, 3. ]
       DetForm:
         shrinkRatio: 0.4
       ProbMaker:
