--- a/config/adb_eb0.yaml
+++ b/config/adb_eb0.yaml
@@ -7,12 +7,14 @@ lossModel:
   model:
     asn:
       shape: [ 640, 640 ]
+      hidden_channel: 32
     backbone:
       netID: 'b0'
-      depthProb: 0.2
-      useSE: False
+      depthProb: 0.3
+      useSE: True
     neck:
-      dataPoint: [ 24, 40, 112, 1280 ]
+      data_point: [ 24, 40, 112, 1280 ]
+      layer_num: 2
       exp: 256
     head:
       k: 50
@@ -49,7 +51,7 @@ train:
   shuffle: True
   pinMemory: False
   dataset:
-    imgType: 1
+    imgType: 0
     imgDir: 'D:\dataset\vintext\train/image'
     tarFile: 'D:\dataset\vintext\train/target.json'
     prep:
@@ -64,11 +66,7 @@ train:
               y : [ -5, 5 ]
           fit_output: True
         Resize:
-          size: [ 0.5, 3. ]
-      DetCrop:
-        generalSize: [800, 800]
-        minCropSize: 0.1
-        maxTries: 10
+          size: [ 0.5, 1. ]
       DetForm:
         shrinkRatio: 0.4
       ProbMaker:
