--- a/config/adb_eb0.yaml
+++ b/config/adb_eb0.yaml
@@ -17,19 +17,13 @@ lossModel:
       layer_num: 2
       exp: 256
     head:
-      k: 50
-      km: 9
+      thresh: 0.3
       exp: 256
 
   loss:
-    threshScale: 10
-    threshLoss:
-      eps: !!float '1e-6'
-    probScale: 5
     probLoss:
       ratio: 3.
       eps: !!float '1e-6'
-    binaryScale: 1
     binaryLoss:
       eps: !!float '1e-6'
 
