--- a/config/adb_eb0.yaml
+++ b/config/adb_eb0.yaml
@@ -1,7 +1,6 @@
-totalEpoch: 1000
+totalEpoch: 1200
 startEpoch: 1
-lr: 0.007
-factor: 0.9
+lr: 0.001
 
 lossModel:
   model:
@@ -99,10 +98,10 @@ valid:
         key: [ 'polygon', 'ignore', 'train' ]
 
 optimizer:
-  name: SGD
+  name: Adam
   args:
-    momentum: 0.9
-    weight_decay: 0.0001
+    betas: [ 0.9, 0.999 ]
+    eps: !!float '1e-8'
 
 checkpoint:
   workspace: './checkpoint'
